[package]
name = "alfred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
clap-verbosity-flag = "1.0.0"
env_logger = "0.9.0"
git2 = "0.14.4"
log = "0.4.17"
